--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,19 @@
 Package: RMCSim
-Title: What the Package Does (One Line, Title Case)
+Title: R Interface to GNU MCSim 
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Nan-Hung",
+           family = "Hsieh",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "d99622005@ntu.edu.tw",
+           comment = c(ORCID = "0000-0003-0163-2766"))
+Description: Execute 'GNU MCSim' (https://ftp.gnu.org/gnu/mcsim/), 
+    a simulation and statistical inference tool for algebraic 
+    or differential equation systems, throught R interface.
+License: GPL (>= 3)
 Encoding: UTF-8
-LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
