--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: Execute 'GNU MCSim' (https://ftp.gnu.org/gnu/mcsim/),
     a simulation and statistical inference tool for algebraic 
     or differential equation systems, throught R interface.
 License: GPL (>= 3)
+Imports:
+    withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
