--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(find_mcsim)
 export(install_mcsim)
 export(makemcsim)
+export(mcsim)
 export(mcsim_version)
+export(perc_input)
 export(perc_model)
 import(withr)
+importFrom(utils,menu)
