perc_mcmc_input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(install_mcsim)
 export(makemcsim)
 export(mcsim)
 export(mcsim_version)
-export(perc_input)
+export(perc_lsodes_input)
+export(perc_mcmc_input)
 export(perc_model)
 import(withr)
 importFrom(utils,menu)
